💄(demo) fix asset path and layout issue
Asset paths were wrong so once built the application contained broken
links. Then fix a layout issue.

--- a/apps/demo/src/index.scss
+++ b/apps/demo/src/index.scss
@@ -28,7 +28,7 @@ html {
 
 html, body, #root {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   margin: 0;
 }
 
@@ -93,12 +93,13 @@ html, body, #root {
 }
 
 html[data-theme="redflux"] {
-  background: #000000D7 url(redflux_bg.webp) 50%/cover no-repeat fixed;
+  background: #000000D7 url(/redflux_bg.webp) 50%/cover no-repeat fixed;
   background-blend-mode: darken;
 }
 
 html[data-theme="blueney"] {
-  background: url(blueney_bg.jpg) 50%/cover no-repeat fixed;
+  background: url(/blueney_bg.jpg) 50%/cover no-repeat fixed;
+
 }
 
 // Create
